Kubernetes/Prod/statefullset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations: {}
  labels:
    app.kubernetes.io/instance: flufik
    app.kubernetes.io/name: flufik
  name: flufik
  namespace: flufik
spec:
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: flufik
      app.kubernetes.io/name: flufik
  serviceName: flufik-svc
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: flufik
        app.kubernetes.io/name: flufik
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - image: eduard1001171985/flufik:1.5.2
          imagePullPolicy: IfNotPresent
          name: flufik
          ports:
            - containerPort: 8080
              name: registry
              protocol: TCP
          resources: {}
          securityContext: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /opt/flufik
              name: flufik-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: flufik-data
        namespace: flufik
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
        volumeMode: Filesystem
